--- a/minesweeper/Cargo.toml
+++ b/minesweeper/Cargo.toml
@@ -11,6 +11,7 @@ strip = true
 [dependencies]
 rand = "0.8"
 thiserror = "1"
+serde = { version = "1.0", features = ["derive"] }
 
 [dependencies.clap]
 version = "3"
