--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,16 +3,34 @@
   "tasks": [
     {
       "type": "cargo",
-      "command": "tauri",
-      "args": ["dev"],
-      "problemMatcher": ["$rustc"],
-      "label": "tauri dev"
+      "command": "check",
+      "problemMatcher": [
+        "$rustc"
+      ],
+      "group": "build",
+      "label": "rust: cargo check"
     },
     {
       "type": "cargo",
       "command": "tauri",
-      "args": ["build"],
-      "problemMatcher": ["$rustc"],
+      "args": [
+        "dev"
+      ],
+      "problemMatcher": [
+        "$rustc"
+      ],
+      "group": "build",
+      "label": "Tauri Dev"
+    },
+    {
+      "type": "cargo",
+      "command": "tauri",
+      "args": [
+        "build"
+      ],
+      "problemMatcher": [
+        "$rustc"
+      ],
       "group": "build",
       "label": "Tauri Build"
     }
