--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,11 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.2", features = ["dialog-all"] }
 minesweeper = { path = "../minesweeper" }
+chrono = { version = "0.4", features = ["serde"] }
+rmp = "0.8"
+rmp-serde = "1"
+rmpv = "1"
+anyhow = "1"
 
 [features]
 # by default Tauri runs in production mode
