--- a/minesweeper-gui/Cargo.toml
+++ b/minesweeper-gui/Cargo.toml
@@ -11,3 +11,9 @@ relm4 = "0.5"
 relm4-macros = "0.5"
 relm4-components = "0.5"
 minesweeper = { path = "../minesweeper" }
+rmp = "0.8"
+rmp-serde = "1"
+rmpv = "1"
+serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
+anyhow = "1"
