--- a/minesweeper-gui/Cargo.toml
+++ b/minesweeper-gui/Cargo.toml
@@ -2,14 +2,11 @@
 name = "minesweeper-gui"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "Apache-2.0 OR MIT"
 
 [dependencies]
-# gtk = { version = "0.5", package = "gtk4" }
-relm4 = "0.5"
-relm4-macros = "0.5"
-relm4-components = "0.5"
+relm4 = "0.5.1"
+relm4-components = "0.5.1"
 minesweeper = { path = "../minesweeper" }
 rmp = "0.8"
 rmp-serde = "1"
