--- a/minesweeper/Cargo.toml
+++ b/minesweeper/Cargo.toml
@@ -2,8 +2,8 @@
 name = "minesweeper"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0 OR MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [profile.release]
 panic = "abort"
 strip = true
