--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,7 +7,7 @@ license = ""
 repository = ""
 default-run = "app"
 edition = "2021"
-rust-version = "1.59"
+# rust-version = "1.59"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,9 +15,9 @@ rust-version = "1.59"
 tauri-build = { version = "1.2.1", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.2", features = ["window-set-size"] }
+serde_json = "1"
+serde = { version = "1", features = ["derive"] }
+tauri = { version = "1.3", features = ["window-set-size"] }
 minesweeper = { path = "../minesweeper" }
 chrono = { version = "0.4", features = ["serde"] }
 rmp = "0.8"
