--- a/vite-minesweeper/package.json
+++ b/vite-minesweeper/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0",
+    "@tauri-apps/api": "^1.3.0",
+    "@tauri-apps/cli": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
