--- a/minesweeper-iced/Cargo.toml
+++ b/minesweeper-iced/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = { version = "0.10", features = ["lazy", "tokio"] }
+iced = { version = "0.10", features = ["lazy", "tokio", "advanced"] }
 minesweeper = { path = "../minesweeper" }
