--- a/minesweeper-tauri/Cargo.toml
+++ b/minesweeper-tauri/Cargo.toml
@@ -12,18 +12,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
-tauri = { version = "1.5", features = ["window-set-size"] }
+tauri = { version = "2", features = [] }
 minesweeper = { path = "../minesweeper" }
 chrono = { version = "0.4", features = ["serde"] }
 rmp = "0.8"
 rmp-serde = "1"
 rmpv = "1"
 anyhow = "1"
+tauri-plugin-fs = "2"
 
 [features]
 # by default Tauri runs in production mode
