add debian build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,19 +74,10 @@ jobs:
           export PATH=$HOME/.local/bin:$PATH
           make linux-app-image
 
-      # - name: Build bundle
-      #   uses: AppImageCrafters/build-appimage-action@master
-      #   env:
-      #     UPDATE_INFO: gh-releases-zsync|AppImageCrafters|latest|*x86_64.AppImage.zsync
-      #   with:
-      #     recipe: AppImageBuilder.yml
-
-      # - uses: actions/upload-artifact@v2
-      #   with:
-      #     name: AppImage
-      #     path: "./*.AppImage*"
-
-      # run: |
+      - name: Build debian package
+        run: |
+          cargo install cargo-deb
+          make linux-debian
 
       - name: Create GitHub Release
         id: create_release
