--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
           sudo add-apt-repository universe
           sudo apt install libfuse2t64
 
-      - name: Build bundle
+      - name: Build app image
         run: |
           export PATH=$HOME/.local/bin:$PATH
           make linux-app-image
@@ -93,7 +93,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            MineSweeper-x86_64.AppImage
+            *.AppImage
             target/debian/*.deb
+            *.flatpak
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
