--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
           sudo add-apt-repository universe
           sudo apt install libfuse2t64
 
-      - name: Build bundle
+      - name: Build app image
         run: |
           export PATH=$HOME/.local/bin:$PATH
           make linux-app-image
@@ -79,12 +79,21 @@ jobs:
           cargo install cargo-deb
           make linux-debian
 
+      - name: Build FlatPak
+        run: |
+          sudo apt install flatpak
+          sudo apt install flatpak-builder
+          flatpak remote-add --if-not-exists --user flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+          flatpak-builder --force-clean --user --install-deps-from=flathub --repo=repo --install builddir io.github.darrellroberts.minesweeper.yml
+          flatpak build-bundle repo minesweeper.flatpak io.github.darrellroberts.minesweeper
+
       - name: Create GitHub Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            MineSweeper-x86_64.AppImage
+            *.AppImage
             target/debian/*.deb
+            *.flatpak
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
