update where game history is saved

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,11 +81,9 @@ jobs:
 
       - name: Build FlatPak
         run: |
-          sudo apt install flatpak
-          sudo apt install flatpak-builder
+          sudo apt install flatpak flatpak-builder python3 python3-aiohttp python3-toml libgtk-4-dev build-essential
           flatpak remote-add --if-not-exists --user flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-          flatpak-builder --force-clean --user --install-deps-from=flathub --repo=repo --install builddir io.github.darrellroberts.minesweeper.yml
-          flatpak build-bundle repo minesweeper.flatpak io.github.darrellroberts.minesweeper
+          make linux-flatpak
 
       - name: Create GitHub Release
         id: create_release
