--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,8 +84,7 @@ jobs:
           sudo apt install flatpak
           sudo apt install flatpak-builder
           flatpak remote-add --if-not-exists --user flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-          flatpak-builder --force-clean --user --install-deps-from=flathub --repo=repo --install builddir io.github.darrellroberts.minesweeper.yml
-          flatpak build-bundle repo minesweeper.flatpak io.github.darrellroberts.minesweeper
+          make linux-flatpak
 
       - name: Create GitHub Release
         id: create_release
