Update for gtk4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 members = [
     "minesweeper",
-    # "minesweeper-relm4",
-    #  "minesweeper-tauri",
+    "minesweeper-relm4",
+    "minesweeper-tauri",
     "minesweeper-iced",
 ]
